# COT6481

./: pyproject.toml  sp500_cache.csv
data/: sp500_cache.csv  treasury_cache.csv
midterm/: laffey_john_midterm.ipynb
week7/: laffey_john_week_7.ipynb  sp500_cache.csv  treasury_cache.csv  writeup.md  yfinance-0.2.54-py2.py3-none-any.whl
week8/: laffey_john_week8.ipynb  main.ipynb
